--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano <span>_</span></h2>
-        <div class="conteudo">
+        <div class="conteudo ativo">
             <div class="botoes">
                 <button class="botao ativo">Cursos na Alura</button>
                 <button class="botao">Criar projetos em JavaScript</button>
@@ -17,7 +17,7 @@
                 <button class="botao">Atualizar meu currículo</button>
             </div>
             <div class="abas-textos">
-                <div class="aba-conteudo ativo">
+                <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 </div>
